--- a/LambdaLogic/LambdaLogic.fsproj
+++ b/LambdaLogic/LambdaLogic.fsproj
@@ -13,6 +13,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="FParsec" Version="1.1.1" />
+		<PackageReference Include="FsCodec.SystemTextJson" Version="3.0.3" />
+		<PackageReference Include="FSharp.SystemTextJson" Version="1.3.13" />
 	</ItemGroup>
 
 </Project>
