--- a/LambdaWebApp/LambdaWebApp.fsproj
+++ b/LambdaWebApp/LambdaWebApp.fsproj
@@ -1,5 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
-
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <UserSecretsId>cf33dd2c-c4fd-45bd-a994-4c758884ac9b</UserSecretsId>
@@ -23,5 +22,4 @@
   <ItemGroup>
     <ProjectReference Include="..\LambdaLogic\LambdaLogic.fsproj" />
   </ItemGroup>
-
 </Project>
